Add Responsive and Blogs and Complete The Project

--- a/BlogFlexConcept/index.html
+++ b/BlogFlexConcept/index.html
@@ -67,25 +67,116 @@
             </nav>
           </aside>
         </div>
-        <div class="content box">
-          <main>
+          <div class="content">
+             <main></main>
             <div class="card">
-              <div class="img"></div>
+              <div class="img">
+                <img src="./assets/images/BlogImage1.png" alt="Blog1" />
+              </div>
               <div class="card-header">
                 <h1>title</h1>
-                <em>dateTime</em>
+                <address>dateTime</address>
               </div>
               <div class="card-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Blanditiis sunt fugit veniam accusamus aliquid itaque, at illum
-                repellat exercitationem assumenda.
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Blanditiis sunt fugit veniam accusamus aliquid itaque, at
+                  illum repellat exercitationem assumenda.
+                </p>
               </div>
               <div class="button"><button>Read More</button></div>
             </div>
-          </main>
-        </div>
+            <div class="card">
+              <div class="img">
+                <img src="./assets/images/BlogImage2.jpg" alt="Blog2" />
+              </div>
+              <div class="card-header">
+                <h1>title</h1>
+                <address>dateTime</address>
+              </div>
+              <div class="card-content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Blanditiis sunt fugit veniam accusamus aliquid itaque, at
+                  illum repellat exercitationem assumenda.
+                </p>
+              </div>
+              <div class="button"><button>Read More</button></div>
+            </div>
+            <div class="card">
+              <div class="img">
+                <img src="./assets/images/BlogImage3.jpg" alt="Blog3" />
+              </div>
+              <div class="card-header">
+                <h1>title</h1>
+                <address>dateTime</address>
+              </div>
+              <div class="card-content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Blanditiis sunt fugit veniam accusamus aliquid itaque, at
+                  illum repellat exercitationem assumenda.
+                </p>
+              </div>
+              <div class="button"><button>Read More</button></div>
+            </div>
+            <div class="card">
+              <div class="img">
+                <img src="./assets/images/BlogImage4.jpg" alt="Blog4" />
+              </div>
+              <div class="card-header">
+                <h1>title</h1>
+                <address>dateTime</address>
+              </div>
+              <div class="card-content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Blanditiis sunt fugit veniam accusamus aliquid itaque, at
+                  illum repellat exercitationem assumenda.
+                </p>
+              </div>
+              <div class="button"><button>Read More</button></div>
+            </div>
+            <div class="card">
+              <div class="img">
+                <img src="./assets/images/BlogImage5.jpg" alt="Blog5" />
+              </div>
+              <div class="card-header">
+                <h1>title</h1>
+                <address>dateTime</address>
+              </div>
+              <div class="card-content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Blanditiis sunt fugit veniam accusamus aliquid itaque, at
+                  illum repellat exercitationem assumenda.
+                </p>
+              </div>
+              <div class="button"><button>Read More</button></div>
+            </div>
+            <div class="card">
+              <div class="img">
+                <img src="./assets/images/BlogImage6.jpg" alt="Blog5" />
+              </div>
+              <div class="card-header">
+                <h1>title</h1>
+                <address>dateTime</address>
+              </div>
+              <div class="card-content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Blanditiis sunt fugit veniam accusamus aliquid itaque, at
+                  illum repellat exercitationem assumenda.
+                </p>
+              </div>
+              <div class="button"><button>Read More</button></div>
+            </div>
+            </main>
+          </div>
       </div>
-      <div class="titleHF box"><footer>footer</footer></div>
+      <div class="titleHF box"><footer><a href="https://github.com/KASRA10/" target="_blank"><i class="fa-brands fa-github"></i></a></i>
+        <a href="https://github.com/KASRA10/" target="_blank"><i class="fa-solid fa-globe"></i></a>
+</footer></div>
     </div>
     <script>
       $("button").mousedown(function () {
