Add New Flex Project

--- a/BlogFlexConcept/index.html
+++ b/BlogFlexConcept/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Flex" />
     <meta
       name="description"
-      content="This is a repository includes some flex box design to mention some learning points about it."
+      content="Flex Box Design Concept of a Blog Cards. Just Learning Some Flex Design Technique"
     />
     <meta name="subject" content="Display Flex" />
     <meta name="copyright" content="kasrasparrow@gmail.com" />
